# browser-extensions

./: .gitignore  .goreleaser.yml  README.ja.md  README.md  THIRDPARTY.md  release-please-config.json
.github/scripts/: check_ci_pinning.js  check_ci_pinning.py
.github/workflows/: build.yml  execute-test.yml  release.yml  sha-pinning.yml  test.yml
exif-viewer/: README.ja.md  README.md  background.js  content.js  manifest.json  shared.js
exif-viewer/tests/: content.test.js  shared.test.js
meet-translator/: README.ja.md  README.md  background.js  content.js  manifest.json  offscreen.js  options.html  options.js  popup.html  popup.js
meet-translator/extension/: background.js  content.js  i18n.js  manifest.json  offscreen.html  offscreen.js  options.html  options.js  popup.html  popup.js  shared.js
meet-translator/extension/tests/: background-health.test.js  background.test.js  content-ui.test.js  shared.test.js
meet-translator/server/: .gitignore  CMakeLists.txt  Makefile  README.md  asr_backend.go  audio.go  autoconfig.go  autoconfig_test.go  backend_prism.go  backend_standard.go  context_buffer.go  dom_selector.go  glossary.go  glossary_improver.go  go.mod  gpu_cpu.go  gpu_cuda.go  gpu_metal.go  llama.go  llama_bridge.cpp  llama_bridge.h  llm_backend.go  main.go  model_defaults.go  model_download.go  model_download_test.go  model_manager.go  model_manager_test.go  model_options.go  model_options_test.go  model_selector.go  model_selector_test.go  ollama_cache.go  ollama_cache_test.go  preflight.go  python_asr.go  python_asr_regression_test.go  python_asr_test.go  python_launcher.go  python_launcher_test.go  (+17 more)
meet-translator/server/cmd/benchmark/: dataset.go  main.go  scorer.go  scorer_test.go
meet-translator/server/python/: asr_worker.py  llm_worker.py  requirements-asr-sensevoice.txt  requirements-asr-transformers.txt  requirements-asr-whisperx.txt  requirements-asr.txt
server/: Makefile  README.md  audio.go  go.mod  go.sum  gpu_cuda.go  gpu_metal.go  llama_bridge.cpp  main.go  ollama.go  preflight.go  subprocess.go  whisper.go
